--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,19 +1,22 @@
-name: Deploy Landing Page
+name: Sync to Live Website
+
 on:
   push:
     branches: [ main ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: 🚚 Copy HTML to VPS
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
+
+      - name: 🚚 Overwrite Live Files
         uses: appleboy/scp-action@master
         with:
           host: "109.199.120.38"
           username: "root"
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "*" # This sends your index.html and assets
-          target: "/var/www/SMART-TUTOR-WEBSITE" # Adjust to your web root
-      - name: ✅ Deployment Complete
-        run: echo "Landing page deployed successfully!"
+          source: "*"            # Grabs all files from this repo
+          target: "/var/www/smart-tutor" # The live folder on your VPS
+          overwrite: true        # Replaces old files with the new ones
